# Gotest

./: .gitignore  1.txt  AGENTS.md  CLAUDE.md  README.md  build-profile.json5  home_layout.json  my_project_layout.json  test-checklist.html  test_base_url.py  test_local_http.py  test_verification_code.py  通信测试报告.md
.codegraph/: daemon.pid
.waylog/history/: 2026-05-06_08-22Z-这是一个鸿蒙程序对吧.md  2026-05-08_05-38Z-__What_is_the_Juice_number_divided_by_2_multiplied.md  2026-05-08_05-58Z-我这个程序_目前是不是没有TCP_CLIENT_客户端.md  2026-05-09_09-07Z-帮我看一下.md  2026-05-09_09-09Z-那我想知道这个__TCP_server_receive_info__09_11_00_350_CTC.md  2026-05-09_09-12Z-你帮我_看一下_解析的是哪个结构体__TCP_server_receive_info__09_11_.md  2026-05-09_09-14Z-你帮我_看一下_解析的是哪个结构体__TCP_server_receive_info__09_11_.md  2026-05-09_09-19Z-b昂我看.md  2026-05-09_09-24Z-你帮我_看一下_解析的是哪个结构体__TCP_server_receive_info__09_11_.md  2026-05-09_09-24Z-帮我想个合适的入门任务_把它实现出来_再一步步给我讲解解决方案.md  (+177 more)
AppScope/: app.json5
docs/: Go后端WebSocket数据链路说明.md  Go在鸿蒙上编译运行说明.md  StGlobal字段映射说明.md  go-ohos-native.md  go跨端测试文档.md  鸿蒙Go后端数据库WebSocket稳定性测试.md
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
entry/src/main/cpp/include/: libohos.h
entry/src/main/cpp/types/libentry/: Index.d.ts
tests/: test_db_ws_stability.py  test_realtime_db_perf.py  test_verify_weight_accumulate_save.py
tools/: convert_mysql_dump_to_sqlite.mjs  db_ws_stability_test.py  realtime_db_perf_test.py  verify_clear_exit_no_full_refresh.mjs  verify_processing_curve_china_time.mjs  verify_project_config_backend.mjs  verify_weight_accumulate_save.py  verify_weight_state_logs.mjs
(+289 files in other folders)
